--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,29 +1,16 @@
-<div class="components components-grid">
-    {{ partial "sidenav" . }}
-    <main>
-        <section>{{.Content}}</section>
-
-        {{ range .Pages }}
-        <section>
-            <div style="border: 1px solid black; margin:10px; padding:10px; ">
-                <div style="font-size:20px;">
-                    <a href="{{.URL}}">{{.Title}}</a>
-                </div>
-                <div style="color:grey; font-size:16px;">{{ dateFormat "Monday, Jan 2, 2006" .Date }}</div>
-                <div style="color:grey; font-size:16px;">{{ if .Params.tags }}<strong>Tags:</strong> {{range
-                    .Params.tags}}<a href="{{ " /tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a> {{end}}{{end}}
-                </div>
-                <div style="color:grey; font-size:16px;">{{ if .Params.categories }}<strong>Categories:</strong> {{range
-                    .Params.categories}}<a href="{{ " /categories/" | relLangURL }}{{ . | urlize }}">{{ . }}</a>
-                    {{end}}{{end}}</div>
-                <div style="color:grey; font-size:16px;">{{ if .Params.moods }}<strong>Moods:</strong> {{range
-                    .Params.moods}}<a href="{{ " /moods/" | relLangURL }}{{ . | urlize }}">{{ . }}</a> {{end}}{{end}}
-                </div>
-
-                <p style="font-size:18px;">{{.Summary}}</p>
-            </div>
-        </section>
+{{ define "main" }}
+<div class="main-container">
+    <section class="content-container">
+        {{ with .Content }}
+        <div class="index-content">
+            {{ . }}
+        </div>
         {{ end }}
-
-    </main>
+        {{ range .Pages}}
+            <section>
+               <h3><a href="{{ .Permalink }}">{{ .Title | markdownify }}</a></h3>
+            </section>
+        {{ end}}
+    </section>
 </div>
+{{end}}
