--- a/src/css/site.css
+++ b/src/css/site.css
@@ -5,3 +5,12 @@
 .top-nav-divider {
     margin-top: 5px;
 }
+
+.main-container {
+    display: flex;
+    flex-direction: row;
+}
+
+.nav-container {
+    width: 200px;
+}
