--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,6 +1,7 @@
 {{ define "main" }}
 <div class="main-container">
     <section class="content-container">
+        <h1>{{ .Title }} </h1>
         {{ with .Content }}
         <div class="index-content">
             {{ . }}
