--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,4 @@
 <footer class="footer">
-    <hr />
     <a href="https://quobix.com">quobix</a> {{ .Date.Format "2006" }} 
-    <span class="generated-timestamp">[generated {{ dateFormat "02 Jan 06 15:04 MST" .Date.Local }}]</span>
+    <span class="generated-timestamp">[generated {{ dateFormat "02/01/06 15:04 MST" .Date.Local }}]</span>
 </footer>
