--- a/static/assets/app.css
+++ b/static/assets/app.css
@@ -1,9 +1,9 @@
 .container, .container-fluid {
-    margin: 20px auto auto 20px;
+    margin: 0 auto;
     padding: 0 calc(var(--global-space) * 2);
     display: flex;
     flex-direction: column;
-    height: 98vh;
+    height: 100vh;
 }
 
 .main-container {
@@ -44,12 +44,18 @@
     width: 100%;
     flex-shrink: 0;
     height: 40px;
+    border-left: 1px dashed var(--tertiary-color);
+    border-top: 1px dashed var(--tertiary-color);
+    border-right: 1px dashed var(--tertiary-color);
+    padding: 10px;
+
+    
 }
 
 .footer hr {
     margin-top: 0;
     margin-bottom: 10px;
-    border-bottom-color: var(--tertiary-color)
+   
 
 }
 
@@ -62,3 +68,9 @@
 .content-container h1 {
     font-size: 22px;
 }
+
+@media only screen and (max-width: 600px) {
+    .generated-timestamp {
+        display: none;
+    }
+  }
