--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
 <footer class="footer">
-    <a href="https://quobix.com">quobix</a> {{ .Date.Format "2006" }} 
+    <a href="https://quobix.com">quobix</a> 2007-{{ .Date.Format "2006" }} 
     <span class="generated-timestamp">[generated {{ dateFormat "02/01/06 15:04 MST" .Date.Local }}]</span>
 </footer>
