--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>{{ block "title" . }}{{ .Site.Title }}{{ end }}</title>
 <script src="/assets/bundle.js"></script>
-<link rel="stylesheet" href="/assets/app.css" />
 <style>
     :root {
         --global-font-size: 15px;
@@ -27,12 +26,15 @@
         --error-color: #ff3c74;
         --progress-bar-background: #3f3f44;
         --progress-bar-fill: #62c4ff;
-        --code-bg-color: #3f3f44;
+        --code-bg-color: none;
         --input-style: solid;
         --display-h1-decoration: none;
+        --bold-text: #e397fa;
+        --hrcolor: #3d3d3d;
+        
     }
 </style>
-
+<link rel="stylesheet" href="/assets/app.css" />
 <!-- OG data -->
 <meta property="og:locale" content="{{ $.Site.Language.Lang }}" />
 <meta property="og:type" content="{{ if .IsPage }}article{{ else }}website{{ end }}" />
