really enjoying pulling this all together now.

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,9 +6,9 @@
 </head>
 
 <body class="terminal">
+    {{ partial "header" . }}
     <div class="container">
-        {{ partial "header" . }}
-        {{ block "main" . }}
+        {{ block "mainblock" . }}
         {{ end }}
         {{ partial "footer" . }}
     </div>
