--- a/layouts/author/single.html
+++ b/layouts/author/single.html
@@ -6,17 +6,14 @@
                <div class="about-strapline">
                     <em>{{ .Params.strapline }}</em>
                </div>
-
-               <hr />
-
+               <hr class="about-header-divider"/>
                <div class="profile-crop">
                     <img src="/images/about/dave-shanley-headshot.jpg" class="profile-shot" />
                </div>
-               <section class="article-body">
+               <section class="about-body">
                     {{.Content}}
                </section>
                <hr class="article-footer-divider"/>
-               
           </article>
      </main>
 </div>
