--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -20,7 +20,7 @@
         --page-width: 80em;
         --font-color: #e8e9ed;
         --invert-font-color: #222225;
-        --secondary-color: #de7dfc;
+        --secondary-color: #b685ff;
         --tertiary-color: #a3abba;
         --primary-color: #62c4ff;
         --error-color: #ff3c74;
@@ -31,9 +31,11 @@
         --display-h1-decoration: none;
         --bold-text: #e397fa;
         --hrcolor: #3d3d3d;
+        --code-border: #525252;
         
     }
 </style>
+<link rel="stylesheet" href="/assets/syntax.css" />
 <link rel="stylesheet" href="/assets/app.css" />
 <!-- OG data -->
 <meta property="og:locale" content="{{ $.Site.Language.Lang }}" />
