--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,20 +1,29 @@
-{{ define "main" }}
+{{ define "mainblock" }}
 <div class="main-container">
-     <section class="content-container">
-          <article class="article-content">
-
-               <time datetime="{{ .Date}}">{{ dateFormat "January 2, 2006" .Date }}</time>
+     <main class="content-container">
+          <article class="framed-content">
                <h1 class="article-title">{{.Title}}</h1>
+               <time datetime="{{ .Date}}">{{ dateFormat "January 2, 2006" .Date }}</time>
                <div class="article-strapline">
                     <em>{{ .Params.strapline }}</em>
                </div>
                <hr />
                <section class="article-body">
-               {{.Content}}
+                    {{ if (isset .Params "hero")}}
+                    <figure>
+                         <img src="{{ .Params.hero }}" alt="{{ .Params.heroAlt }}">
+                         <figcaption>
+                              <h4>{{ .Params.heroTitle }}</h4>
+                         </figcaption>
+                    </figure>
+                    {{end}}
+                    {{.Content}}
                </section>
-     </section>
-
-     </article>
-     </section>
+               <hr />
+               <nav class="go-back-parent-link">
+                    <a href="{{ .Parent.RelPermalink }}">&lt; Back to {{ .Parent.Title}}</a>
+               </fnav>
+          </article>
+     </main>
 </div>
 {{end}}
