--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,6 +3,7 @@
 
 <head>
     {{ partial "head" . }}
+    <base href="https://daveshanley.github.io/quobix.com/">
 </head>
 
 <body class="terminal">
