more basepath stuff

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,3 +1,4 @@
+<base href="https://daveshanley.github.io/quobix.com/">
 <meta charset="utf-8">
 <meta name="description" content="quobix.com, home of dave shanley">
 <meta name="keywords" content="dave shanley, shanley, code, golang, java, typescript, quobix, engineer">
