--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -11,7 +11,7 @@
                <section class="article-body">
                     {{ if (isset .Params "hero")}}
                     <figure>
-                         <img src="{{ .Params.hero }}" alt="{{ .Params.heroAlt }}">
+                         <img src="{{ .Site.BaseURL }}{{ .Params.hero }}" alt="{{ .Params.heroAlt }}">
                          <figcaption>
                               <h4>{{ .Params.heroTitle }}</h4>
                          </figcaption>
