--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,9 +1,9 @@
 <div class="quobix-header">
     <section class="terminal-nav">
         <header class="terminal-logo">
-            <div class="logo terminal-prompt"><a href="/">{{ .Site.Title }}</a></div>
+            <div class="logo terminal-prompt"><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></div>
         </header>
-        <nav class="terminal-menu">
+        <nav class="terminal-menu" id="header-menu">
             <ul vocab="https://schema.org/" typeof="BreadcrumbList">
                 {{- $current := . }}
                 {{- range .Site.Menus.main}}
