Updating to ensure a11y

--- a/layouts/author/single.html
+++ b/layouts/author/single.html
@@ -8,7 +8,7 @@
                </div>
                <hr class="about-header-divider"/> 
                <div class="profile-crop">
-                    <img src="{{ .Site.BaseURL }}images/about/dave-shanley-headshot.jpg" class="profile-shot" />
+                    <img src="{{ .Site.BaseURL }}images/about/dave-shanley-headshot.jpg" class="profile-shot" alt="a profile picture of Dave Shanley" title="Dave Shanley" />
                </div>
                <section class="about-body">
                     {{.Content}}
