--- a/static/assets/app.css
+++ b/static/assets/app.css
@@ -241,7 +241,7 @@ blockquote::after {
 
 
 .generated-timestamp {
-    color: #63636b;
+    color: #a2a2af;
     font-size: 12px;
     float: right;
 }
