--- a/static/assets/app.css
+++ b/static/assets/app.css
@@ -337,6 +337,13 @@ ul.page-list>li {
     margin-bottom: 20px;
 }
 
+.latest-page-item h2 {
+    margin-top: 10px;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+
 .latest-page-item sub {
     color: var(--tertiary-color)
 }
