--- a/layouts/author/single.html
+++ b/layouts/author/single.html
@@ -6,14 +6,14 @@
                <div class="about-strapline">
                     <em>{{ .Params.strapline }}</em>
                </div>
-               <hr class="about-header-divider"/> 
+               <hr class="about-header-divider" />
                <div class="profile-crop">
-                    <img src="{{ .Site.BaseURL }}images/about/dave-shanley-headshot.jpg" class="profile-shot" alt="a profile picture of Dave Shanley" title="Dave Shanley" />
+                    <img src="{{ .Site.BaseURL }}images/about/dave-shanley-headshot.jpg" height="220" width="220"
+                         class="profile-shot" alt="a profile picture of Dave Shanley" title="Dave Shanley" />
                </div>
                <section class="about-body">
                     {{.Content}}
                </section>
-               <hr class="article-footer-divider"/>
           </article>
      </main>
 </div>
