--- a/static/assets/app.css
+++ b/static/assets/app.css
@@ -315,12 +315,10 @@ ul.page-list>li {
     margin-bottom: 60px;
     margin-top: 50px;
     align-items: center;
-}
-
-.latest-page-item {
     height: 100%;
     max-height: 300px;
 }
+
 .latest-page-item img {
     height: 100%;
     max-height: 300px;
@@ -455,6 +453,7 @@ li.page-list-item sub {
     .latest-page-item {
         display: block!important;
         height: inherit!important;
+        max-height: initial;
     }
     .latest-page-item section {
         display: block!important;
@@ -491,5 +490,6 @@ li.page-list-item sub {
     #header-menu.hide { 
         height: 0px;
     }
+    
     
 }
