more structured data

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,12 +6,13 @@
         <nav class="terminal-menu" id="header-menu">
             <ul vocab="https://schema.org/" typeof="BreadcrumbList">
                 {{- $current := . }}
-                {{- range .Site.Menus.main}}
+                {{- range $k, $v := .Site.Menus.main }}
                 {{- $active := eq .Name $current.Name}}
                 <li property="itemListElement" typeof="ListItem">
-                    <a href="{{ .URL }}" property="item" typeof="WebPage"
+                    <a href="{{ $v.URL }}" property="item" typeof="WebPage"
                         class="menu-item {{ if $active }}active{{end}}">
-                        <span property="name" class="{{ if $current.HasMenuCurrent "main" . }} active{{end}}">{{.Name}}</span>
+                        <span property="name" class="{{ if $current.HasMenuCurrent "main" . }} active{{end}}">{{ $v.Name}}</span>
+                        <meta property="position" content="{{ add $k 1 }}">
                     </a>
                 </li>
                 {{- end}}
