--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -36,29 +36,20 @@
         --bold-text: #e397fa;
         --hrcolor: #3d3d3d;
         --code-border: #525252;
-        
     }
 </style>
 <link rel="stylesheet" href="{{ .Site.BaseURL }}assets/syntax.css" />
 <link rel="stylesheet" href="{{ .Site.BaseURL }}assets/app.css" />
 <!-- OG data -->
-<meta property="og:locale" content="{{ $.Site.Language.Lang }}" />
+<meta property="og:locale" content="en" />
 <meta property="og:type" content="{{ if .IsPage }}article{{ else }}website{{ end }}" />
 <meta property="og:title" content="{{ if .IsHome }}{{ $.Site.Title }}{{ else }}{{ .Title }}{{ end }}">
 <meta property="og:description" content="{{ if .IsHome }}{{ $.Site.Params.Subtitle }}{{ else if .Description}}{{ .Description | plainify }}{{ else }}{{ .Summary | plainify }}{{ end }}" />
 <meta property="og:url" content="{{ .Permalink }}" />
 <meta property="og:site_name" content="{{ $.Site.Title }}" />
-{{ if and (not .IsHome) (isset .Params "cover") -}}
-<meta property="og:image" content="{{ .Param " cover" | absURL }}">
-{{ else -}}
-    {{- if isset $.Site.Params "favicon" }}
-    <meta property="og:image" content="{{ $.Site.Params.favicon | absURL }}">
-    {{- else -}}
-    <meta property="og:image" content="{{ printf " img/favicon/%s.png" $.Site.Params.ThemeColor | absURL }}">
-    {{- end -}}
-{{- end -}}
-<meta property="og:image:width" content="2048">
-<meta property="og:image:height" content="1024">
+<meta property="og:image" content="{{ .Params.hero | absURL }}">
+<meta property="og:image:width" content="1400">
+<meta property="og:image:height" content="680">
 {{- range .Params.categories }}
 <meta property="article:section" content="{{ . }}" />
 {{ end }}
