--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -50,6 +50,14 @@
 <meta property="og:image" content="{{ .Params.hero | absURL }}">
 <meta property="og:image:width" content="1400">
 <meta property="og:image:height" content="680">
+
+<!-- twitter meta data -->
+<meta name="twitter:title" content="{{ if .IsHome }}{{ $.Site.Title }}{{ else }}{{ .Title }}{{ end }}">
+<meta name="twitter:description" content="{{ if .IsHome }}{{ $.Site.Params.Subtitle }}{{ else if .Description}}{{ .Description | plainify }}{{ else }}{{ .Summary | plainify }}{{ end }}">
+<meta name="twitter:image" content=" {{ .Params.hero | absURL }}">
+<meta name="twitter:card" content="summary_large_image">
+
+
 {{- range .Params.categories }}
 <meta property="article:section" content="{{ . }}" />
 {{ end }}
