--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -56,6 +56,8 @@
 <meta name="twitter:description" content="{{ if .IsHome }}{{ $.Site.Params.Subtitle }}{{ else if .Description}}{{ .Description | plainify }}{{ else }}{{ .Summary | plainify }}{{ end }}">
 <meta name="twitter:image" content=" {{ .Params.hero | absURL }}">
 <meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@daveshanley">
+<meta name="twitter:creator" content="@daveshanley">
 
 
 {{- range .Params.categories }}
