--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,7 +7,7 @@
 <meta name="keywords" content="dave shanley, shanley, code, golang, java, typescript, quobix, engineer">
 <meta name="author" content="dave shanley">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>{{ block "title" . }}{{ .Site.Title }}{{ end }}</title>
+<title>{{ block "title" . }}{{ if .IsHome }}{{ .Site.Title }}: code is art{{ else }}quobix: {{ .Title }}{{ end }}{{ end }}</title>
 <script src="{{ .Site.BaseURL }}assets/bundle.js"></script>
 <style>
     :root {
@@ -52,9 +52,6 @@
 <meta property="og:image:height" content="680">
 
 <!-- twitter meta data -->
-<meta name="twitter:title" content="{{ if .IsHome }}{{ $.Site.Title }}{{ else }}{{ .Title }}{{ end }}">
-<meta name="twitter:description" content="{{ if .IsHome }}{{ $.Site.Params.Subtitle }}{{ else if .Description}}{{ .Description | plainify }}{{ else }}{{ .Summary | plainify }}{{ end }}">
-<meta name="twitter:image" content=" {{ .Params.hero | absURL }}">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@daveshanley">
 <meta name="twitter:creator" content="@daveshanley">
